<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.zhihudemo.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:label="@string/menu_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:label="@string/menu_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:label="@string/menu_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:label="@string/menu_share" />

    <fragment
        android:id="@+id/nav_send"
        android:label="@string/menu_send" />
</navigation>